# stm32-cmsis-examples

stm32/: CMakeLists.txt  configure.sh  m.sh  stm32f10x_conf.h
stm32/src/: delay.c  delay.h  led_debug.c  led_debug.h  main.c  main_stepper.c  motor.c  motor.h  rcc.c  rcc.h  reed.c  reed.h  servo.c  servo.h  step.c  step.h  uart_debug.c  uart_debug.h
